[project]
name = "znp"
version = "0.1.0"
description = ""
authors = [
    {name = "nvilmer",email = "nvilmer@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "zigpy (>=1.2.2,<2.0.0)",
    "zigpy-znp (>=0.14.3,<0.15.0)"
]

[tool.poetry]
packages = [{include = "znp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
znp = "znp.cli:main"
